<resources>
    <string name="app_name">Flamedemy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="api_level_is_an_integer_value_that_uniquely_identifies_the_framework_api_revision_offered_by_a_version_of_the_android_platform">API Level is an integer value that uniquely identifies the framework API revision offered by a version of the Android platform.</string>
    <string name="what_is_api_level">WHAT IS API LEVEL</string>
    <string name="beginner">Beginner</string>
    <string name="ad_unit_id">ca-app-pub-1490893971660694/4497759543x</string>
    <string name="the_code_names_of_android_ranges_from_a_to_n_currently_such_as_aestro_blender_cupcake_donut_eclair_froyo_gingerbread_honeycomb_ice_cream_sandwitch_jelly_bean_kitkat_lollipop_and_marshmallow_let_s_understand_the_android_history_in_a_sequence">The code names of android ranges from A to N currently, such as Aestro, Blender, Cupcake, Donut, Eclair, Froyo, Gingerbread, Honeycomb, Ice Cream Sandwitch, Jelly Bean, KitKat, Lollipop and Marshmallow. Let\'s understand the android history in a sequence.</string>
    <string name="android_is_an_open_source_and_linux_based_operating_system_for_mobile_devices_such_as_smartphones_and_tablet_computers_android_was_developed_by_the_open_handset_alliance_led_by_google_and_other_companies_on_june_27_2012_at_the_google_i_o_conference_google_announced_the_next_android_version_4_1_jelly_bean_jelly_bean_is_an_incremental_update_with_the_primary_aim_of_improving_the_user_interface_both_in_terms_of_functionality_and_performance">Android is an open source and Linux-based Operating System for mobile devices such as smartphones and tablet computers. Android was developed by the Open Handset Alliance, led by Google, and other companies. On June 27, 2012, at the Google I/O conference, Google announced the next Android version, 4.1 Jelly Bean. Jelly Bean is an incremental update, with the primary aim of improving the user interface, both in terms of functionality and performance.</string>
    <string name="what_is_android">WHAT IS ANDROID</string>
    <string name="categories_of_android_applications">Categories of Android applications</string>
    <string name="there_are_many_android_applications_in_the_market_the_top_categories_are">There are many android applications in the market. The top categories are −</string>
    <string name="history_of_android">History of Android</string>
    <string name="your_coin_so_far">Your Coin so Far : 00</string>
    <string name="earn_coin_by_watching_ads">EARN COIN BY WATCHING ADS</string>
    <string name="starting_a_new_project">Starting a new project</string>
    <string name="once_android_studio_is_up_and_running_you_ll_want_to_dive_in_and_create_a_new_project_you_can_do_this_by_launching_android_studio_and_then_selecting_new_project_or_you_can_choose_file_new_new_project_at_any_time_from_the_ide_itself"><![CDATA[Once Android Studio is up and running, you’ll want to dive in and create a new project. You can do this by launching Android Studio and then selecting New Project, or you can choose File > New > New Project at any time from the IDE itself.]]></string>
    <string name="you_ll_then_have_the_opportunity_to_choose_from_a_number_of_different_types_of_activity_activities_are_effectively_screens_in_an_app_in_some_cases_this_will_be_the_entire_app_or_in_others_your_app_might_transition_from_one_screen_to_the_next_you_re_free_to_start_a_new_project_with_no_activity_in_which_case_you_would_choose_add_no_activity_but_you_ll_almost_always_want_one_so_it_s_easier_to_let_android_studio_set_you_up_with_something_resembling_a_blank_app_template_to_begin_with">You’ll then have the opportunity to choose from a number of different types of activity. Activities are effectively ‘screens’ in an app. In some cases, this will be the entire app or in others, your app might transition from one screen to the next. You’re free to start a new project with no activity (in which case, you would choose ‘Add No Activity’) but you’ll almost always want one, so it’s easier to let Android Studio set you up with something resembling a blank app template to begin with.</string>
    <string name="choose_activity">Often you’ll choose a ‘Empty Activity’, which is the default look and feel for a new Android App. This will create nothing, from Scratch. Pick the option that best suits the app you have in mind to build and this will impact on the kind of files you are presented with when you first start things up. You’ll also be able to choose your app’s name at this point, the minimum Android SDK you want to support and the package name. The package name is the final file name that the app will have when you upload it to the Play Store – a combination of the app’s name, along with the name of the developer.</string>
</resources>
