<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="devpekka.flushdemy.Overview">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


        <TextView
            android:id="@+id/explain_android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/what_is_android"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/android" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/explain_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/android_is_an_open_source_and_linux_based_operating_system_for_mobile_devices_such_as_smartphones_and_tablet_computers_android_was_developed_by_the_open_handset_alliance_led_by_google_and_other_companies_on_june_27_2012_at_the_google_i_o_conference_google_announced_the_next_android_version_4_1_jelly_bean_jelly_bean_is_an_incremental_update_with_the_primary_aim_of_improving_the_user_interface_both_in_terms_of_functionality_and_performance"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/categories_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/categories_of_android_applications"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/categories_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/there_are_many_android_applications_in_the_market_the_top_categories_are" />

        <ImageView
            android:id="@+id/category_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:srcCompat="@drawable/categories" />

        <TextView
            android:id="@+id/history_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_of_android"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/history_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/the_code_names_of_android_ranges_from_a_to_n_currently_such_as_aestro_blender_cupcake_donut_eclair_froyo_gingerbread_honeycomb_ice_cream_sandwitch_jelly_bean_kitkat_lollipop_and_marshmallow_let_s_understand_the_android_history_in_a_sequence" />

        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/jistory" />

    </LinearLayout>

</ScrollView>
